--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
         <p>Подробности проекта на Хабре &mdash; <a href="https://habrahabr.ru/post/325998/">Разбираем квалифицированные сертификаты X.509 в поисках ИНН, СНИЛС и ОГРН</a>.</p>
         
-        {% include_relative bottom.html %}
+        1{% include_relative bottom.html %}2
         
     </div><!-- /.container -->
 
