--- a/index2.html
+++ b/index2.html
@@ -61,7 +61,9 @@
 
         <p>Подробности проекта на Хабре &mdash; <a href="https://habrahabr.ru/post/325998/">Разбираем квалифицированные сертификаты X.509 в поисках ИНН, СНИЛС и ОГРН</a>.</p>
         
-        1{% include_relative bottom.html %}2
+        1
+        {% include bottom.html %}
+        2
         
     </div><!-- /.container -->
 
