--- a/index.html
+++ b/index.html
@@ -1,8 +1,27 @@
 ---
 layout: default
-title: Hank Quinlan, Horrible Cop
+title: Решения и услуги в области информационной безопасности
 ---
-<div class="blurb">
-	<h1>Hi there, I'm Hank Quinlan!</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
-</div><!-- /.blurb -->
+  
+    <div class="jumbotron mt-4">
+      <div class="container">
+        <h1 class="display-4">Лаборатория проблем информационной безопасности</h1>
+        <p class="lead">Являемся разработчиками средств защиты информации и обеспечения информационной безопасности:
+          <ul>
+            <li><a href="soa.html">Система обнаружения атак</a>
+            <li><a href="siem.html">Система управления инцидентами безопасности</a>
+            <li><a href="reestr.html">Реестр сертификатов X.509</a>
+            <li><a href="smi.html">Система мониторинга СМИ</a>
+          </ul>
+        </p>
+        <hr>
+        <div class="row">
+          <div class="col">
+            <p>Электронная почта: <a href="mailto:79208085372@ya.ru">79208085372@ya.ru</a></p>
+          </div>
+          <div class="col">
+            <p class="text-muted text-right">Разработано с использованием <a href="https://pages.github.com/">GitHub Pages</a>, <a href="https://jekyllrb.com/">Jekyll</a>, <a href="http://getbootstrap.com/">Bootstrap</a></p>
+          </div>
+        </div>
+      </div>
+    </div>
