--- a/reestr.html
+++ b/reestr.html
@@ -47,6 +47,6 @@ title: Реестр сертификатов X.509
         <li>Исходные данные сертификата в "сыром виде"
       </ul>
 
-      <p>Подробности проекта на Хабре &mdash; <a href="https://habrahabr.ru/post/325998/">Разбираем квалифицированные сертификаты X.509 в поисках ИНН, СНИЛС и ОГРН</a>.</p>
+      <p>Подробности проекта на Хабре &mdash; <a href="https://habrahabr.ru/post/325998/" target="_blank">Разбираем квалифицированные сертификаты X.509 в поисках ИНН, СНИЛС и ОГРН</a>.</p>
       
     </div><!-- /.container -->
