--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ title: Решения и услуги в области информационн
             <p>Электронная почта: <a href="mailto:79208085372@ya.ru">79208085372@ya.ru</a></p>
           </div>
           <div class="col">
-            <p class="text-muted text-right">Разработано с использованием <a href="https://pages.github.com/">GitHub Pages</a>, <a href="https://jekyllrb.com/">Jekyll</a>, <a href="http://getbootstrap.com/">Bootstrap</a></p>
+            <p class="text-muted text-right">Разработано с использованием <a href="https://pages.github.com/" target="_blank">GitHub&nbsp;Pages</a>, <a href="https://jekyllrb.com/" target="_blank">Jekyll</a>, <a href="http://getbootstrap.com/" target="_blank">Bootstrap</a></p>
           </div>
         </div>
       </div>
