--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Решения и услуги в области информационн
   
       <div class="jumbotron mt-4">
         <div class="container">
-          <h1">Лаборатория проблем информационной безопасности</h1>
+          <h1>Лаборатория проблем информационной безопасности</h1>
           <p class="lead">Являемся разработчиками средств защиты информации и обеспечения информационной безопасности:
             <ul>
               <li><a href="soa.html">Система обнаружения атак</a>
