--- a/soa.html
+++ b/soa.html
@@ -4,7 +4,7 @@ title: Система обнаружения атак
 ---
   
       <h1>Распределенная система обнаружения компьютерных атак</h1>
-      <p class="lead">Программное средство "Реестр сертификатов X.509" предназначено для ведения реестра и каталогизации цифровых сертификатов X.509 и позволяет выполнять анализ (разбор), поиск и вывод информации, содержащейся в сертификатах ключей проверки электронной подписи (СКПЭП).</p>
+      <p class="lead">Предназначение системы &mdash; обнаружение вторжений в информационные системы на основе анализа сетевого трафика.</p>
       
       <figure class="figure">
         <img src="images/soa/sshot-3.png" class="figure-img img-fluid" alt="Консоль администратора системы обнаружения атак">
