--- a/reestr.html
+++ b/reestr.html
@@ -3,7 +3,7 @@ layout: default
 title: Реестр сертификатов X.509
 ---
   
-      <h1>Реестр сертификатов X.509</h1>
+      <h1 class="mt-3">Реестр сертификатов X.509</h1>
       <p class="lead">Программное средство "Реестр сертификатов X.509" предназначено для ведения реестра и каталогизации цифровых сертификатов X.509 и позволяет выполнять анализ (разбор), поиск и вывод информации, содержащейся в сертификатах ключей проверки электронной подписи (СКПЭП).</p>
       
       <figure class="figure">
