--- a/soa.html
+++ b/soa.html
@@ -2,8 +2,8 @@
 layout: default
 title: Система обнаружения атак
 ---
-  
-      <h1>Распределенная система обнаружения компьютерных атак</h1>
+
+      <h1 class="mt-3">Распределенная система обнаружения компьютерных атак</h1>
       <p class="lead">Предназначение системы &mdash; обнаружение вторжений в информационные системы на основе анализа сетевого трафика.</p>
       
       <figure class="figure">
