--- a/soa.html
+++ b/soa.html
@@ -22,4 +22,12 @@ title: Система обнаружения атак
         <li>Визуализация и расширенные возможности фильтрации зарегистрированных событий безопасности.
       </ul>
 
-      <p>В настоящее время проводится сертификация СОА по требованиям ФСБ России. Ближайшие планы &mdash; подготовка к сертификации по требованиям ФСТЭК России.</p>
+      <p>В настоящее время проводится сертификация СОА по требованиям ФСБ России.</p>
+      <p>Ближайшие планы &mdash; подготовка к сертификации по требованиям ФСТЭК России (руководящий документ "Требования к системам обнаружения вторжений", <strong>4 класс защиты</strong> &mdash; СОВ-4).</p>
+      <p>Выполнение требований:</p>
+      <ul>
+        <li>Приказ ФСТЭК России № 17 (ГИС) &mdash; СОВ.1 (обнаружение вторжений) и СОВ.2 (обновление базы решающих правил).
+        <li>Приказ ФСТЭК России № 21 (ИСПДн) &mdash; СОВ.1 (обнаружение вторжений) и СОВ.2 (обновление базы решающих правил).
+        <li>Приказ ФСТЭК России № 31 (АСУ ТП КВО) &mdash; СОВ.0 (разработка правил и процедур (политик) обнаружения вторжений), СОВ.1 (обнаружение вторжений) и СОВ.2 (обновление базы решающих правил).
+      </ul>
+      <p></p>
