--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Решения и услуги в области информационн
       <div class="jumbotron mt-4">
         <div class="container">
           <h1>Лаборатория проблем информационной безопасности</h1>
-          <p class="lead">Являемся разработчиками средств защиты информации и обеспечения информационной безопасности:
+          <p class="lead">Оказываем широкий спектр услуг в области информационной безопасности: проектирование, разработка, сертификация, аттестация, аудит, экспертиза. Являемся разработчиками средств защиты информации и обеспечения информационной безопасности:
             <ul>
               <li><a href="soa.html">Система обнаружения атак</a>
               <li><a href="siem.html">Система управления инцидентами безопасности</a>
