--- a/index.html
+++ b/index.html
@@ -3,16 +3,12 @@ layout: default
 title: Решения и услуги в области информационной безопасности
 ---
   
-      <div class="jumbotron mt-4">
-        <div class="container">
-          <h1>Лаборатория проблем информационной безопасности</h1>
-          <p class="lead">Оказываем широкий спектр услуг в области информационной безопасности: проектирование, разработка, сертификация, аттестация, аудит, экспертиза. Являемся разработчиками средств защиты информации и обеспечения информационной безопасности:
-            <ul>
-              <li><a href="soa.html">Система обнаружения атак</a>
-              <li><a href="siem.html">Система управления инцидентами безопасности</a>
-              <li><a href="reestr.html">Реестр сертификатов X.509</a>
-              <li><a href="smi.html">Система мониторинга СМИ</a>
-            </ul>
-          </p>
-        </div>
-      </div>
+      <h1 class="mt-3">Лаборатория проблем информационной безопасности</h1>
+      <p class="lead">Оказываем широкий спектр услуг в области информационной безопасности: проектирование, разработка, сертификация, аттестация, аудит, экспертиза. Являемся разработчиками средств защиты информации и обеспечения информационной безопасности:
+        <ul>
+          <li><a href="soa.html">Система обнаружения атак</a>
+          <li><a href="siem.html">Система управления инцидентами безопасности</a>
+          <li><a href="reestr.html">Реестр сертификатов X.509</a>
+          <li><a href="smi.html">Система мониторинга СМИ</a>
+        </ul>      
+      </p>
