--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@ title: Решения и услуги в области информационн
 ---
   
       <h1 class="mt-3">Лаборатория проблем информационной безопасности</h1>
-      <p class="lead">Оказываем широкий спектр услуг в области информационной безопасности: проектирование, разработка, сертификация, аттестация, аудит, экспертиза. Являемся разработчиками средств защиты информации и обеспечения информационной безопасности:
-        <ul>
-          <li><a href="soa.html">Система обнаружения атак</a>
-          <li><a href="siem.html">Система управления инцидентами безопасности</a>
-          <li><a href="reestr.html">Реестр сертификатов X.509</a>
-          <li><a href="smi.html">Система мониторинга СМИ</a>
-        </ul>      
-      </p>
+      <p class="lead">Оказываем широкий спектр услуг в области информационной безопасности: проектирование, разработка, сертификация, аттестация, аудит, экспертиза. Являемся разработчиками средств защиты информации и обеспечения информационной безопасности:</p>
+      <ul class="lead">
+        <li><a href="soa.html">Система обнаружения атак</a>
+        <li><a href="siem.html">Система управления инцидентами безопасности</a>
+        <li><a href="reestr.html">Реестр сертификатов X.509</a>
+        <li><a href="smi.html">Система мониторинга СМИ</a>
+      </ul>      
