--- a/smi.html
+++ b/smi.html
@@ -6,7 +6,9 @@ title: Система мониторинга СМИ
       <h1 class="mt-3">Система мониторинга средств массовой информации</h1>
       <p class="lead">Предназначение системы &mdash; мониторинг медиапространства и анализ СМИ. Программный комплекс накапливает в медиаархиве текстовые сообщения из открытых интернет-источников, на основе которых можно проводить анализ и систематизировать информацию по выбранным критериям, отслеживать динамику и тенденции развития интересующих явлений и событий.</p>
       
-      <iframe src="https://www.youtube.com/embed/rltI1vhScS0" frameborder="0" allowfullscreen></iframe>      
+      <div class="embed-responsive embed-responsive-16by9">
+        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/rltI1vhScS0" allowfullscreen></iframe>
+      </div>
       
       <p><strong>Основные функциональные возможности:</strong></p>
       <ul>
