--- a/soa.html
+++ b/soa.html
@@ -7,7 +7,7 @@ title: Система обнаружения атак
       <p class="lead">Предназначение системы &mdash; обнаружение вторжений в информационные системы на основе анализа сетевого трафика.</p>
       
       <figure class="figure">
-        <img src="images/soa/sshot-3.png" class="figure-img img-fluid" alt="Консоль администратора системы обнаружения атак">
+        <img src="media/soa/sshot-3.png" class="figure-img img-fluid" alt="Консоль администратора системы обнаружения атак">
         <figcaption class="figure-caption text-right">Консоль администратора системы обнаружения атак</figcaption>
       </figure>
     
