--- a/smi.html
+++ b/smi.html
@@ -10,6 +10,7 @@ title: Система мониторинга СМИ
         <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/rltI1vhScS0" allowfullscreen></iframe>
       </div>
       
+      <p>&nbsp;</p>
       <p><strong>Основные функциональные возможности:</strong></p>
       <ul>
         <li>Оперативное отслеживание информационной повестки дня
