--- a/siem.html
+++ b/siem.html
@@ -6,7 +6,7 @@ title: Система управления инцидентами безопас
       <h1 class="mt-3">Система управления инцидентами безопасности (SIEM)</h1>
       <p class="lead">Предназначение системы &mdash; выявление сценариев атак в массиве зарегистрированных событий безопасности, осуществление регистрации, мониторинга и анализа инцидентов информационной безопасности.</p>
       
-      <figure class="figure text-center">
+      <figure class="figure mx-auto">
         <img src="media/siem/sshot-1.png" class="figure-img img-fluid" alt="Главное окно макета системы управления инцидентами безопасности">
         <figcaption class="figure-caption text-right">Главное окно макета системы управления инцидентами безопасности</figcaption>
       </figure>
