Update SIEM page

--- a/siem.html
+++ b/siem.html
@@ -8,16 +8,16 @@ title: Система управления инцидентами безопас
       
       <div class="text-center">
         <figure class="figure">
-          <img src="media/siem/sshot-1.png" class="figure-img img-fluid" alt="Главное окно макета системы управления инцидентами безопасности">
+          <img src="media/siem/siem2019.png" class="figure-img img-fluid" alt="Главное окно макета системы управления инцидентами безопасности">
           <figcaption class="figure-caption text-right">Главное окно макета системы управления инцидентами безопасности</figcaption>
         </figure>
       </div>
       
       <p><strong>Основные функциональные возможности:</strong></p>
       <ul>
-        <li>Подключение различных источников событий безопасности (разработаны коннекторы для базы данных MS SQL и протокола syslog).
+        <li>Подключение различных источников событий безопасности (разработаны коннекторы для баз данных MSSQL, PostgreSQL, MySQL, протоколов syslog, SSH, веб-сервера Apache и др.).
         <li>Чтение базы выявления зависимостей между отдельными событиями безопасности в формате OSSEC.
-        <li>Обработка потока поступающих событий безопасности должен в соответствии с загруженными правилами.
+        <li>Обработка потока поступающих событий безопасности в соответствии с загруженными правилами.
         <li>Обнаружение распределенных атак типа "отказ в обслуживании" (DDOS-атак).
         <li>Выявление инцидентов информационной безопасности.
         <li>Формирование оповещений для администратора безопасности.
