Add Habrolink to SIEM page

--- a/siem.html
+++ b/siem.html
@@ -24,3 +24,5 @@ title: Система управления инцидентами безопас
       </ul>
 
       <p>Ближайшие планы &mdash; подготовка к сертификации по требованиям ФСТЭК России (руководящий документ "Защита от несанкционированного доступа к информации. Часть 1. Программное обеспечение средств защиты информации. Классификация по уровню контроля отсутствия недекларированных возможностей", <strong>4 уровень</strong>).</p>
+      
+      <p>Подробности проекта на Хабре &mdash; <a href="https://habrahabr.ru/post/353542/" target="_blank">Как за один день разработать SIEM (систему управления инцидентами информационной безопасности)</a>.</p> 
