Fix SIEM page, update cert info

--- a/siem.html
+++ b/siem.html
@@ -23,6 +23,6 @@ title: Система управления инцидентами безопас
         <li>Формирование оповещений для администратора безопасности.
       </ul>
 
-      <p>Ближайшие планы &mdash; подготовка к сертификации по требованиям ФСТЭК России (руководящий документ "Защита от несанкционированного доступа к информации. Часть 1. Программное обеспечение средств защиты информации. Классификация по уровню контроля отсутствия недекларированных возможностей", <strong>4 уровень</strong>).</p>
+      <p>Ближайшие планы &mdash; оценка соответствия Требованиям к уровням доверия ("Требования по безопасности информации, устанавливающие уровни доверия к средствам технической защиты информации и средствам обеспечения безопасности информационных технологий", <strong>4 уровень доверия</strong>).</p>
       
       <p>Подробности проекта на Хабре &mdash; <a href="https://habrahabr.ru/post/353542/" target="_blank">Как за один день разработать SIEM (систему управления инцидентами информационной безопасности)</a>.</p> 
